<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarActivity">

    <EditText
        android:id="@+id/text_precio_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_precio"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/text_metros_E"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_metros_E"
        app:layout_constraintTop_toBottomOf="@+id/text_metros_E" />

    <EditText
        android:id="@+id/text_ciudad_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txt_ciudad"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_barrio_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_barrio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/text_ciudad_E"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_ciudad_E"
        app:layout_constraintTop_toBottomOf="@+id/text_ciudad_E" />

    <EditText
        android:id="@+id/text_direccion_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_direccion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/text_barrio_E"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_barrio_E"
        app:layout_constraintTop_toBottomOf="@+id/text_barrio_E" />

    <EditText
        android:id="@+id/text_referencia_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_referencia"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/text_direccion_E"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_direccion_E"
        app:layout_constraintTop_toBottomOf="@+id/text_direccion_E" />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_btn_actualizar"
        app:layout_constraintEnd_toEndOf="@+id/text_precio_E"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_precio_E"
        app:layout_constraintTop_toBottomOf="@+id/text_precio_E" />

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_btn_cancelar"
        app:layout_constraintEnd_toEndOf="@+id/text_precio_E"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_precio_E"
        app:layout_constraintTop_toBottomOf="@+id/text_precio_E" />

    <EditText
        android:id="@+id/text_metros_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txt_tamanio"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/text_referencia_E"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_referencia_E"
        app:layout_constraintTop_toBottomOf="@+id/text_referencia_E" />

    <Button
        android:id="@+id/button3"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_btn_borrar"
        app:layout_constraintEnd_toEndOf="@+id/text_precio_E"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_precio_E"
        app:layout_constraintTop_toBottomOf="@+id/btn_ingresar" />
</android.support.constraint.ConstraintLayout>